[gd_scene load_steps=46 format=2]

[ext_resource path="res://Fishing/Fishing.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fishing/Storage/Inventory.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Assets/Player/Hush_A.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Main.gd" type="Script" id=5]
[ext_resource path="res://Conversation/Conversation.tscn" type="PackedScene" id=6]
[ext_resource path="res://Conversation/Radio.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Fish/Coe_B.png" type="Texture" id=8]
[ext_resource path="res://Fishing/Storage/Stacks/BlueFishStack.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Player/Hush_B.png" type="Texture" id=10]
[ext_resource path="res://Assets/Ship/Whale/Whale_Eye.png" type="Texture" id=11]
[ext_resource path="res://Assets/Ship/Whale/Whale_B.png" type="Texture" id=12]
[ext_resource path="res://Assets/Ship/Whale/Whale_Fin_B.png" type="Texture" id=13]
[ext_resource path="res://Assets/Ship/Whale/Whale_Fin_2_B.png" type="Texture" id=14]
[ext_resource path="res://Assets/Ship/Whale/Whale_Fin_3_B.png" type="Texture" id=15]
[ext_resource path="res://Assets/Ship/Whale/Whale_Fin_1_A.png" type="Texture" id=16]
[ext_resource path="res://Assets/Ship/Ship_A.png" type="Texture" id=17]
[ext_resource path="res://Assets/Ship/Whale/Whale_Lamp_B.png" type="Texture" id=18]
[ext_resource path="res://Assets/Ship/Ship_B.png" type="Texture" id=19]
[ext_resource path="res://Assets/Ship/Whale/Whale_Mouth.png" type="Texture" id=20]
[ext_resource path="res://Assets/Ship/Whale/Whale_Lamp_A.png" type="Texture" id=21]
[ext_resource path="res://Assets/Ship/Whale/Whale_Fin_2_A.png" type="Texture" id=22]
[ext_resource path="res://Assets/Ship/Whale/Whale_Fin_3_A.png" type="Texture" id=23]
[ext_resource path="res://Assets/Ship/Whale/Whale_A.png" type="Texture" id=24]
[ext_resource path="res://Conversation/Narrative.gd" type="Script" id=25]
[ext_resource path="res://Assets/Ship/Crane/Crane_Arm_A.png" type="Texture" id=26]
[ext_resource path="res://Assets/Ship/Crane/Crane_Clamp_1.png" type="Texture" id=27]
[ext_resource path="res://Assets/Ship/Crane/Crane_Clamp_2.png" type="Texture" id=28]
[ext_resource path="res://Fishing/Feeding/Crane.gd" type="Script" id=29]
[ext_resource path="res://Fishing/FishAttach.tscn" type="PackedScene" id=30]
[ext_resource path="res://Fishing/Storage/Stacks/GreenFishStack.tscn" type="PackedScene" id=31]
[ext_resource path="res://Fishing/Storage/Stacks/PurpleFishStack.tscn" type="PackedScene" id=32]
[ext_resource path="res://Fishing/Storage/Stacks/GoldFishStack.tscn" type="PackedScene" id=33]
[ext_resource path="res://Fishing/Storage/Stacks/RedFishStack.tscn" type="PackedScene" id=34]
[ext_resource path="res://Assets/Ship/Crane/Crane_Arm_B.png" type="Texture" id=35]
[ext_resource path="res://Audio/StarryWhale_NowWithWhales.wav" type="AudioStream" id=36]

[sub_resource type="Animation" id=9]
resource_name = "Crane_Down"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("FirstPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 3.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8.5, -7.3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FirstPivot/SecondPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 73.4, -79.4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FirstPivot/SecondPivot/ThirdPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3, 4.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 79.3, -35.7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FirstPivot/SecondPivot/ThirdPivot/Clamp/AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Crane_Down_Return"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("FirstPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -7.3, 56.2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FirstPivot/SecondPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -79.4, -150.8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FirstPivot/SecondPivot/ThirdPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -35.7, 150.7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FirstPivot/SecondPivot/ThirdPivot/Clamp/AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Crane_Up"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("FirstPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 56.2, 8.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FirstPivot/SecondPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -150.8, 73.4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FirstPivot/SecondPivot/ThirdPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 150.7, 79.3 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FirstPivot/SecondPivot/ThirdPivot/Clamp/AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Crane_Up_Return"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("FirstPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8.5, 56.2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FirstPivot/SecondPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 73.4, -150.8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FirstPivot/SecondPivot/ThirdPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 79.3, 150.7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FirstPivot/SecondPivot/ThirdPivot/Clamp/AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FirstPivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FirstPivot/SecondPivot:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("FirstPivot/SecondPivot/ThirdPivot:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FirstPivot/SecondPivot/ThirdPivot/Clamp/AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 106, 184, 0, 0, 0, 0, 269, 184, 0, 0, 0, 0, 337, 208, 0, 0, 0, 0, 444, 209, 0, 0, 0, 0, 489, 205, 0, 0, 0, 0, 521, 205 )
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Soundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 36 )
volume_db = -10.0

[node name="Fishing" parent="." instance=ExtResource( 1 )]
position = Vector2( -137, -44 )

[node name="Inventory" parent="." instance=ExtResource( 2 )]
position = Vector2( -170, 164 )

[node name="Narrative" type="Node2D" parent="."]
script = ExtResource( 25 )
barks = PoolStringArray( "QuickChat1", "QuickChat2", "QuickChat3" )
plotline = PoolStringArray( "FirstContact", "MuchBetter" )

[node name="Conversation" parent="Narrative" instance=ExtResource( 6 )]

[node name="Ship" type="Node2D" parent="."]
position = Vector2( -25, 389 )
scale = Vector2( 0.4, 0.4 )

[node name="Whale" type="Node2D" parent="Ship"]
modulate = Color( 0.815686, 0.388235, 0, 1 )

[node name="Background" type="Node2D" parent="Ship/Whale"]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )

[node name="Whale_Fin_1_A" type="Sprite" parent="Ship/Whale/Background"]
texture = ExtResource( 13 )

[node name="Whale_Fin_2_A" type="Sprite" parent="Ship/Whale/Background"]
texture = ExtResource( 22 )

[node name="Whale_Fin_3_A" type="Sprite" parent="Ship/Whale/Background"]
texture = ExtResource( 23 )

[node name="Whale_Mouth" type="Sprite" parent="Ship/Whale/Background"]
texture = ExtResource( 20 )

[node name="Middle" type="Node2D" parent="Ship/Whale"]

[node name="Whale_A" type="Sprite" parent="Ship/Whale/Middle"]
modulate = Color( 0.768627, 0.768627, 0.768627, 1 )
texture = ExtResource( 24 )

[node name="Whale_B" type="Sprite" parent="Ship/Whale/Middle/Whale_A"]
modulate = Color( 0.607843, 0.607843, 0.607843, 1 )
texture = ExtResource( 12 )

[node name="Foreground" type="Node2D" parent="Ship/Whale"]

[node name="Whale_Fin_1_B" type="Sprite" parent="Ship/Whale/Foreground"]
texture = ExtResource( 16 )

[node name="Whale_Fin_2_B" type="Sprite" parent="Ship/Whale/Foreground"]
texture = ExtResource( 14 )

[node name="Whale_Fin_3_B" type="Sprite" parent="Ship/Whale/Foreground"]
texture = ExtResource( 15 )

[node name="Lamp" type="Node2D" parent="Ship/Whale"]

[node name="Whale_Lamp_B" type="Sprite" parent="Ship/Whale/Lamp"]
texture = ExtResource( 18 )

[node name="Whale_Lamp_A" type="Sprite" parent="Ship/Whale/Lamp"]
modulate = Color( 0.541176, 0.541176, 0.541176, 1 )
texture = ExtResource( 21 )

[node name="Whale_Eye" type="Sprite" parent="Ship/Whale"]
texture = ExtResource( 11 )

[node name="Rig" type="Node2D" parent="Ship"]

[node name="Base" type="Node2D" parent="Ship/Rig"]
modulate = Color( 0.215686, 0.309804, 0.596078, 1 )

[node name="Ship_B" type="Sprite" parent="Ship/Rig/Base"]
modulate = Color( 0.596078, 0.596078, 0.596078, 1 )
z_index = -10
texture = ExtResource( 19 )

[node name="Ship_A" type="Sprite" parent="Ship/Rig/Base"]
texture = ExtResource( 17 )

[node name="Crane" type="Node2D" parent="Ship/Rig"]
position = Vector2( -610, -205 )
script = ExtResource( 29 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Ship/Rig/Crane"]
reset_on_save = false
anims/Crane_Down = SubResource( 9 )
anims/Crane_Down_Return = SubResource( 10 )
anims/Crane_Up = SubResource( 11 )
anims/Crane_Up_Return = SubResource( 12 )
anims/RESET = SubResource( 8 )

[node name="TestButtons" type="Node2D" parent="Ship/Rig/Crane"]
position = Vector2( 932.5, 472.5 )
scale = Vector2( 2.5, 2.5 )

[node name="Feed" type="Button" parent="Ship/Rig/Crane/TestButtons"]
margin_left = -346.0
margin_top = -65.0
margin_right = -250.0
margin_bottom = -45.0
text = "Feed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstPivot" type="Node2D" parent="Ship/Rig/Crane"]
position = Vector2( -2.5, 0 )
rotation = 0.980875

[node name="SecondPivot" type="Node2D" parent="Ship/Rig/Crane/FirstPivot"]
modulate = Color( 0.807843, 0.807843, 0.807843, 1 )
position = Vector2( -227.5, 2.49994 )
rotation = -2.63196
scale = Vector2( 1, 1 )

[node name="ThirdPivot" type="Node2D" parent="Ship/Rig/Crane/FirstPivot/SecondPivot"]
modulate = Color( 0.807843, 0.807843, 0.807843, 1 )
position = Vector2( -227.5, 2.49988 )
rotation = 2.63021
scale = Vector2( 1, 1 )

[node name="Clamp" type="Node2D" parent="Ship/Rig/Crane/FirstPivot/SecondPivot/ThirdPivot"]
position = Vector2( -302.5, 10.0001 )
scale = Vector2( 1, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Ship/Rig/Crane/FirstPivot/SecondPivot/ThirdPivot/Clamp"]
position = Vector2( 10, -5 )
rotation = -2.19911
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 6 )

[node name="FishAttach" parent="Ship/Rig/Crane/FirstPivot/SecondPivot/ThirdPivot/Clamp" instance=ExtResource( 30 )]
position = Vector2( -37.5359, -4.03748 )
rotation = 1.5708
scale = Vector2( 2, 2 )
z_index = -1
fish = {
"Blue": ExtResource( 9 ),
"Gold": ExtResource( 33 ),
"Green": ExtResource( 31 ),
"Purple": ExtResource( 32 ),
"Red": ExtResource( 34 )
}

[node name="Arm1B" type="Sprite" parent="Ship/Rig/Crane/FirstPivot/SecondPivot/ThirdPivot"]
modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
position = Vector2( -110.2, 2.2998 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 35 )

[node name="Arm1A" type="Sprite" parent="Ship/Rig/Crane/FirstPivot/SecondPivot/ThirdPivot"]
position = Vector2( -110.2, 2.2998 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 26 )

[node name="Arm1B" type="Sprite" parent="Ship/Rig/Crane/FirstPivot/SecondPivot"]
modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
position = Vector2( -110.2, 2.2998 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 35 )

[node name="Arm1A" type="Sprite" parent="Ship/Rig/Crane/FirstPivot/SecondPivot"]
position = Vector2( -110.2, 2.2998 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 26 )

[node name="Arm1B" type="Sprite" parent="Ship/Rig/Crane/FirstPivot"]
modulate = Color( 0.760784, 0.760784, 0.760784, 1 )
position = Vector2( -110.2, 2.2998 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 35 )

[node name="Arm1A" type="Sprite" parent="Ship/Rig/Crane/FirstPivot"]
position = Vector2( -110.2, 2.2998 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 26 )

[node name="Player" type="Path2D" parent="."]
position = Vector2( -325, 100 )
z_index = -5
curve = SubResource( 1 )
script = ExtResource( 3 )

[node name="PlayerFollow" type="PathFollow2D" parent="Player"]
position = Vector2( 110.515, 184 )
offset = 4.54
loop = false

[node name="PlayerObject" type="Node2D" parent="Player/PlayerFollow"]
scale = Vector2( 0.2, 0.2 )

[node name="Flipper" type="Node2D" parent="Player/PlayerFollow/PlayerObject"]

[node name="PlayerSpriteB" type="AnimatedSprite" parent="Player/PlayerFollow/PlayerObject/Flipper"]
modulate = Color( 0.776471, 0.776471, 0.776471, 1 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 2 )
offset = Vector2( 40, 0 )

[node name="PlayerSpriteA" type="AnimatedSprite" parent="Player/PlayerFollow/PlayerObject/Flipper"]
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 5 )
offset = Vector2( 40, 0 )

[node name="PlayerTracker" type="Node2D" parent="."]

[node name="Camera" type="Camera2D" parent="PlayerTracker"]
position = Vector2( 266, -83 )
rotation = -3.82995e-06
scale = Vector2( 1.2, 1.2 )
current = true
zoom = Vector2( 1.2, 1.2 )

[node name="Radio" parent="PlayerTracker/Camera" instance=ExtResource( 7 )]

[node name="Background" type="Node2D" parent="PlayerTracker/Camera"]
rotation = 3.82995e-06
z_index = -25

[node name="TemporaryBG" type="Sprite" parent="PlayerTracker/Camera/Background"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 100, 100 )
texture = ExtResource( 8 )

[connection signal="finished" from="Soundtrack" to="." method="_on_Soundtrack_finished"]
[connection signal="animation_finished" from="Ship/Rig/Crane/AnimationPlayer" to="Ship/Rig/Crane" method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Ship/Rig/Crane/TestButtons/Feed" to="Ship/Rig/Crane" method="_on_Feed_pressed"]
